# Verifikacija-softvera

./: .gitmodules  CMakeLists.txt  README.md  custom.patch
cppcheck/: changes.patch  cppcheck_report.txt  cppcheck_report_after_improving.txt  run_cppcheck.sh
lcov/: coverage.info  read_report.md
lcov/necessary files/: 2048-Game.gcno  2048-Kbhit.gcno  2048-KeyPushManager.gcno  2048-Utils.gcno  2048-main.gcno  test_drawBoard-Game.gcda  test_drawBoard-Game.gcno  test_drawBoard-Kbhit.gcda  test_drawBoard-Kbhit.gcno  test_drawBoard-KeyPushManager.gcda  test_drawBoard-KeyPushManager.gcno  test_drawBoard-Utils.gcda  test_drawBoard-Utils.gcno  test_finish-Game.gcda  test_finish-Game.gcno  test_finish-Kbhit.gcda  test_finish-Kbhit.gcno  test_finish-KeyPushManager.gcda  test_finish-KeyPushManager.gcno  test_finish-Utils.gcda  test_finish-Utils.gcno  test_init-Game.gcda  test_init-Game.gcno  test_init-Kbhit.gcda  test_init-Kbhit.gcno  test_init-KeyPushManager.gcda  test_init-KeyPushManager.gcno  test_init-Utils.gcda  test_init-Utils.gcno  test_moving_down-Game.gcda  test_moving_down-Game.gcno  test_moving_down-Kbhit.gcda  test_moving_down-Kbhit.gcno  test_moving_down-KeyPushManager.gcda  test_moving_down-KeyPushManager.gcno  test_moving_down-Utils.gcda  test_moving_down-Utils.gcno  test_moving_left-Game.gcda  test_moving_left-Game.gcno  test_moving_left-Kbhit.gcda  (+21 more)
unit_tests/: run_tests.py  running_tests.md
unit_tests/tests/: test_drawBoard.cpp  test_finish.cpp  test_init.cpp  test_moving_down.cpp  test_moving_left.cpp  test_moving_right.cpp  test_moving_up.cpp
(+18 files in other folders)
